vezba8domaci/zadatak2/micko.output
Grammar

    0 $accept: program $end

    1 program: global_list function_list

    2 global_list: %empty
    3            | global_list global_var

    4 global_var: type _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: %empty

    8 $@2: %empty

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

   10 type: _TYPE

   11 parameter: %empty
   12          | type _ID parameter
   13          | type _ID _COMMA parameter

   14 $@3: %empty

   15 body: _LBRACKET variable_list $@3 statement_list _RBRACKET

   16 variable_list: %empty
   17              | variable_list variable

   18 variable: type _ID _SEMICOLON

   19 statement_list: %empty
   20               | statement_list statement

   21 statement: compound_statement
   22          | assignment_statement
   23          | if_statement
   24          | return_statement

   25 compound_statement: _LBRACKET statement_list _RBRACKET

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   27 num_exp: exp
   28        | num_exp _AROP exp

   29 exp: literal
   30    | _ID
   31    | function_call
   32    | _LPAREN num_exp _RPAREN

   33 literal: _INT_NUMBER
   34        | _UINT_NUMBER

   35 $@4: %empty

   36 function_call: _ID $@4 _LPAREN argument _RPAREN

   37 argument: %empty
   38         | num_exp
   39         | argument _COMMA num_exp

   40 if_statement: if_part
   41             | if_part _ELSE statement

   42 @5: %empty

   43 $@6: %empty

   44 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN statement

   45 rel_exp: num_exp _RELOP num_exp

   46 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 10
_IF (259) 44
_ELSE (260) 41
_RETURN (261) 46
_ID (262) 4 9 12 13 18 26 30 36
_INT_NUMBER (263) 33
_UINT_NUMBER (264) 34
_LPAREN (265) 9 32 36 44
_RPAREN (266) 9 32 36 44
_LBRACKET (267) 15 25
_RBRACKET (268) 15 25
_ASSIGN (269) 26
_SEMICOLON (270) 4 18 26 46
_AROP (271) 28
_RELOP (272) 45
_COMMA (273) 13 39
ONLY_IF (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
global_list (22)
    on left: 2 3, on right: 1 3
global_var (23)
    on left: 4, on right: 3
function_list (24)
    on left: 5 6, on right: 1 6
function (25)
    on left: 9, on right: 5 6
$@1 (26)
    on left: 7, on right: 9
$@2 (27)
    on left: 8, on right: 9
type (28)
    on left: 10, on right: 4 9 12 13 18
parameter (29)
    on left: 11 12 13, on right: 9 12 13
body (30)
    on left: 15, on right: 9
$@3 (31)
    on left: 14, on right: 15
variable_list (32)
    on left: 16 17, on right: 15 17
variable (33)
    on left: 18, on right: 17
statement_list (34)
    on left: 19 20, on right: 15 20 25
statement (35)
    on left: 21 22 23 24, on right: 20 41 44
compound_statement (36)
    on left: 25, on right: 21
assignment_statement (37)
    on left: 26, on right: 22
num_exp (38)
    on left: 27 28, on right: 26 28 32 38 39 45 46
exp (39)
    on left: 29 30 31 32, on right: 27 28
literal (40)
    on left: 33 34, on right: 29
function_call (41)
    on left: 36, on right: 31
$@4 (42)
    on left: 35, on right: 36
argument (43)
    on left: 37 38 39, on right: 36 39
if_statement (44)
    on left: 40 41, on right: 23
if_part (45)
    on left: 44, on right: 40 41
@5 (46)
    on left: 42, on right: 44
$@6 (47)
    on left: 43, on right: 44
rel_exp (48)
    on left: 45, on right: 44
return_statement (49)
    on left: 46, on right: 24


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (global_list)

    program      go to state 1
    global_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_list . function_list
    3 global_list: global_list . global_var

    _TYPE  shift, and go to state 4

    global_var     go to state 5
    function_list  go to state 6
    function       go to state 7
    type           go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

   10 type: _TYPE .

    $default  reduce using rule 10 (type)


State 5

    3 global_list: global_list global_var .

    $default  reduce using rule 3 (global_list)


State 6

    1 program: global_list function_list .
    6 function_list: function_list . function

    _TYPE  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 9
    type      go to state 10


State 7

    5 function_list: function .

    $default  reduce using rule 5 (function_list)


State 8

    4 global_var: type . _ID _SEMICOLON
    9 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 11


State 9

    6 function_list: function_list function .

    $default  reduce using rule 6 (function_list)


State 10

    9 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 12


State 11

    4 global_var: type _ID . _SEMICOLON
    9 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    _SEMICOLON  shift, and go to state 13

    $default  reduce using rule 7 ($@1)

    $@1  go to state 14


State 12

    9 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 14


State 13

    4 global_var: type _ID _SEMICOLON .

    $default  reduce using rule 4 (global_var)


State 14

    9 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 15


State 15

    9 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 4

    $default  reduce using rule 11 (parameter)

    type       go to state 16
    parameter  go to state 17


State 16

   12 parameter: type . _ID parameter
   13          | type . _ID _COMMA parameter

    _ID  shift, and go to state 18


State 17

    9 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 19


State 18

   12 parameter: type _ID . parameter
   13          | type _ID . _COMMA parameter

    _TYPE   shift, and go to state 4
    _COMMA  shift, and go to state 20

    $default  reduce using rule 11 (parameter)

    type       go to state 16
    parameter  go to state 21


State 19

    9 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 8 ($@2)

    $@2  go to state 22


State 20

   13 parameter: type _ID _COMMA . parameter

    _TYPE  shift, and go to state 4

    $default  reduce using rule 11 (parameter)

    type       go to state 16
    parameter  go to state 23


State 21

   12 parameter: type _ID parameter .

    $default  reduce using rule 12 (parameter)


State 22

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 24

    body  go to state 25


State 23

   13 parameter: type _ID _COMMA parameter .

    $default  reduce using rule 13 (parameter)


State 24

   15 body: _LBRACKET . variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 16 (variable_list)

    variable_list  go to state 26


State 25

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 9 (function)


State 26

   15 body: _LBRACKET variable_list . $@3 statement_list _RBRACKET
   17 variable_list: variable_list . variable

    _TYPE  shift, and go to state 4

    $default  reduce using rule 14 ($@3)

    type      go to state 27
    $@3       go to state 28
    variable  go to state 29


State 27

   18 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 30


State 28

   15 body: _LBRACKET variable_list $@3 . statement_list _RBRACKET

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 31


State 29

   17 variable_list: variable_list variable .

    $default  reduce using rule 17 (variable_list)


State 30

   18 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 32


State 31

   15 body: _LBRACKET variable_list $@3 statement_list . _RBRACKET
   20 statement_list: statement_list . statement

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36
    _RBRACKET  shift, and go to state 37

    statement             go to state 38
    compound_statement    go to state 39
    assignment_statement  go to state 40
    if_statement          go to state 41
    if_part               go to state 42
    return_statement      go to state 43


State 32

   18 variable: type _ID _SEMICOLON .

    $default  reduce using rule 18 (variable)


State 33

   44 if_part: _IF . _LPAREN @5 rel_exp $@6 _RPAREN statement

    _LPAREN  shift, and go to state 44


State 34

   46 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    num_exp        go to state 49
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52


State 35

   26 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 53


State 36

   25 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 54


State 37

   15 body: _LBRACKET variable_list $@3 statement_list _RBRACKET .

    $default  reduce using rule 15 (body)


State 38

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 39

   21 statement: compound_statement .

    $default  reduce using rule 21 (statement)


State 40

   22 statement: assignment_statement .

    $default  reduce using rule 22 (statement)


State 41

   23 statement: if_statement .

    $default  reduce using rule 23 (statement)


State 42

   40 if_statement: if_part .
   41             | if_part . _ELSE statement

    _ELSE  shift, and go to state 55

    $default  reduce using rule 40 (if_statement)


State 43

   24 statement: return_statement .

    $default  reduce using rule 24 (statement)


State 44

   44 if_part: _IF _LPAREN . @5 rel_exp $@6 _RPAREN statement

    $default  reduce using rule 42 (@5)

    @5  go to state 56


State 45

   30 exp: _ID .
   36 function_call: _ID . $@4 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 35 ($@4)
    $default  reduce using rule 30 (exp)

    $@4  go to state 57


State 46

   33 literal: _INT_NUMBER .

    $default  reduce using rule 33 (literal)


State 47

   34 literal: _UINT_NUMBER .

    $default  reduce using rule 34 (literal)


State 48

   32 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    num_exp        go to state 58
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52


State 49

   28 num_exp: num_exp . _AROP exp
   46 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 59
    _AROP       shift, and go to state 60


State 50

   27 num_exp: exp .

    $default  reduce using rule 27 (num_exp)


State 51

   29 exp: literal .

    $default  reduce using rule 29 (exp)


State 52

   31 exp: function_call .

    $default  reduce using rule 31 (exp)


State 53

   26 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    num_exp        go to state 61
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52


State 54

   20 statement_list: statement_list . statement
   25 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36
    _RBRACKET  shift, and go to state 62

    statement             go to state 38
    compound_statement    go to state 39
    assignment_statement  go to state 40
    if_statement          go to state 41
    if_part               go to state 42
    return_statement      go to state 43


State 55

   41 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36

    statement             go to state 63
    compound_statement    go to state 39
    assignment_statement  go to state 40
    if_statement          go to state 41
    if_part               go to state 42
    return_statement      go to state 43


State 56

   44 if_part: _IF _LPAREN @5 . rel_exp $@6 _RPAREN statement

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    num_exp        go to state 64
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52
    rel_exp        go to state 65


State 57

   36 function_call: _ID $@4 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 66


State 58

   28 num_exp: num_exp . _AROP exp
   32 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 67
    _AROP    shift, and go to state 60


State 59

   46 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 46 (return_statement)


State 60

   28 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    exp            go to state 68
    literal        go to state 51
    function_call  go to state 52


State 61

   26 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   28 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 69
    _AROP       shift, and go to state 60


State 62

   25 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 25 (compound_statement)


State 63

   41 if_statement: if_part _ELSE statement .

    $default  reduce using rule 41 (if_statement)


State 64

   28 num_exp: num_exp . _AROP exp
   45 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 60
    _RELOP  shift, and go to state 70


State 65

   44 if_part: _IF _LPAREN @5 rel_exp . $@6 _RPAREN statement

    $default  reduce using rule 43 ($@6)

    $@6  go to state 71


State 66

   36 function_call: _ID $@4 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    $default  reduce using rule 37 (argument)

    num_exp        go to state 72
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52
    argument       go to state 73


State 67

   32 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 32 (exp)


State 68

   28 num_exp: num_exp _AROP exp .

    $default  reduce using rule 28 (num_exp)


State 69

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 26 (assignment_statement)


State 70

   45 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    num_exp        go to state 74
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52


State 71

   44 if_part: _IF _LPAREN @5 rel_exp $@6 . _RPAREN statement

    _RPAREN  shift, and go to state 75


State 72

   28 num_exp: num_exp . _AROP exp
   38 argument: num_exp .

    _AROP  shift, and go to state 60

    $default  reduce using rule 38 (argument)


State 73

   36 function_call: _ID $@4 _LPAREN argument . _RPAREN
   39 argument: argument . _COMMA num_exp

    _RPAREN  shift, and go to state 76
    _COMMA   shift, and go to state 77


State 74

   28 num_exp: num_exp . _AROP exp
   45 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 60

    $default  reduce using rule 45 (rel_exp)


State 75

   44 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN . statement

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36

    statement             go to state 78
    compound_statement    go to state 39
    assignment_statement  go to state 40
    if_statement          go to state 41
    if_part               go to state 42
    return_statement      go to state 43


State 76

   36 function_call: _ID $@4 _LPAREN argument _RPAREN .

    $default  reduce using rule 36 (function_call)


State 77

   39 argument: argument _COMMA . num_exp

    _ID           shift, and go to state 45
    _INT_NUMBER   shift, and go to state 46
    _UINT_NUMBER  shift, and go to state 47
    _LPAREN       shift, and go to state 48

    num_exp        go to state 79
    exp            go to state 50
    literal        go to state 51
    function_call  go to state 52


State 78

   44 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN statement .

    $default  reduce using rule 44 (if_part)


State 79

   28 num_exp: num_exp . _AROP exp
   39 argument: argument _COMMA num_exp .

    _AROP  shift, and go to state 60

    $default  reduce using rule 39 (argument)
